# Data-Analytics-Challenge

./: .gitignore  Exploracion.ipynb  README.md  cfg.py  constanst.py  pyproject.toml  requirements.txt  script.py
challenge/: app.js  cfg.py  constanst.py  extractors.py  loaders.py  main.py  prueba.py  requirements.txt  script.py
challenge/sql/: base.sql  cant_categ_prov_table.sql  cine_insights.sql  cine_insights_table.sql  raw.sql  size_by_category.sql  size_by_datasource.sql  size_by_prov_source.sql
data/: merge_df_2022-04-26.csv
data/cines/2022-04/: cines-26-04-2022.csv
data/museo/2022-04/: museo-26-04-2022.csv
notebook/: Exploracion.ipynb
notebook/.ipynb_checkpoints/: Exploracion-checkpoint.ipynb
sql/: cant_categoria_table.sql  cant_fuente_table.sql
src/: cfg.py  constanst.py  loaders.py  main.py  script.py
