[tool.poetry]
name = "challenge_alkemy"
version = "0.0.1"
description = "Challenge de python"
authors = ["Enrique-Alvaro <enriquealvaro97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.35"
pandas = "^1.4.2"
SQLAlchemy-Utils = "^0.38.2"
python-decouple = "^3.6"
psycopg2 = "^2.9.3"
click = "^8.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
